// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esroll integration test > should bundle a TypeScript file 1`] = `
{
  "data": [
    47,
    47,
    32,
    115,
    97,
    109,
    112,
    108,
    101,
    46,
    116,
    115,
    10,
    118,
    97,
    114,
    32,
    103,
    114,
    101,
    101,
    116,
    32,
    61,
    32,
    40,
    41,
    32,
    61,
    62,
    32,
    34,
    72,
    101,
    108,
    108,
    111,
    44,
    32,
    119,
    111,
    114,
    108,
    100,
    33,
    34,
    59,
    10,
    10,
    101,
    120,
    112,
    111,
    114,
    116,
    32,
    123,
    32,
    103,
    114,
    101,
    101,
    116,
    32,
    125,
    59,
    10,
    47,
    47,
    35,
    32,
    115,
    111,
    117,
    114,
    99,
    101,
    77,
    97,
    112,
    112,
    105,
    110,
    103,
    85,
    82,
    76,
    61,
    115,
    97,
    109,
    112,
    108,
    101,
    46,
    106,
    115,
    46,
    109,
    97,
    112,
    10,
  ],
  "type": "Buffer",
}
`;

exports[`esroll integration test > should bundle a TypeScript file 2`] = `
{
  "data": [
    123,
    34,
    118,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    51,
    44,
    34,
    102,
    105,
    108,
    101,
    34,
    58,
    34,
    115,
    97,
    109,
    112,
    108,
    101,
    46,
    106,
    115,
    34,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    34,
    58,
    91,
    34,
    46,
    46,
    47,
    46,
    46,
    47,
    115,
    97,
    109,
    112,
    108,
    101,
    46,
    116,
    115,
    34,
    93,
    44,
    34,
    115,
    111,
    117,
    114,
    99,
    101,
    115,
    67,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    110,
    117,
    108,
    108,
    44,
    34,
    110,
    97,
    109,
    101,
    115,
    34,
    58,
    91,
    93,
    44,
    34,
    109,
    97,
    112,
    112,
    105,
    110,
    103,
    115,
    34,
    58,
    34,
    59,
    65,
    65,
    65,
    79,
    44,
    73,
    65,
    65,
    77,
    44,
    81,
    65,
    65,
    81,
    44,
    77,
    65,
    65,
    77,
    59,
    59,
    59,
    59,
    34,
    125,
  ],
  "type": "Buffer",
}
`;
